Regression: Edited action in NLA ignored settings #101275

Closed
opened 2022-09-22 18:41:23 +07:00 by Alexander · 24 comments

System Information
Operating system: Ubuntu 20.04
Graphics card:

Blender Version
Broken: 3.4 alpha
Worked: 3.2

In 3.3: Influence works only when nla strip is selected. But panel is removed in 3.4 for active strip: {b6ebd5591c7f0e7037a2af66b5e1d96125834949}
Also- influence property doesn't update the base action contribution when only action is selected. Behavior changed in 61e8310b75

Short description of error
The action being edited ignores any settings in the NLA. It is quite possible that the problem is in the N panel itself, because in 3.3 the action reacted to changing the settings only in the "Edited Action" category

Exact steps for others to reproduce the error

**System Information** Operating system: Ubuntu 20.04 Graphics card: **Blender Version** Broken: 3.4 alpha Worked: 3.2 In 3.3: Influence works only when nla strip is selected. But panel is removed in 3.4 for active strip: {b6ebd5591c7f0e7037a2af66b5e1d96125834949} Also- influence property doesn't update the base action contribution when only action is selected. Behavior changed in 61e8310b75 **Short description of error** The action being edited ignores any settings in the NLA. It is quite possible that the problem is in the N panel itself, because in 3.3 the action reacted to changing the settings only in the "Edited Action" category **Exact steps for others to reproduce the error** - Open .blend - Change influence slider [#101275.blend](https://archive.blender.org/developer/F13558590/T101275.blend) [2022-09-22 19-36-32.mp4](https://archive.blender.org/developer/F13555241/2022-09-22_19-36-32.mp4)

Added subscriber: @sanek2005

Added subscriber: @sanek2005
Alexander changed title from Edited in NLA ignored settings to Edited action in NLA ignored settings 2022-09-22 18:42:04 +07:00
Collaborator

Added subscriber: @BClark

Added subscriber: @BClark
Collaborator

You don't have the action selected in the second part of the video where it isn't working, you have it selected in the first part where it is.

You don't have the action selected in the second part of the video where it isn't working, you have it selected in the first part where it is.

@BClark no. either it just can't be selected, or I don't know something
2022-09-22 22-23-44.mp4

@BClark no. either it just can't be selected, or I don't know something [2022-09-22 22-23-44.mp4](https://archive.blender.org/developer/F13556071/2022-09-22_22-23-44.mp4)
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Collaborator

Sorry, you are correct, it isn't impacting the top action blend, good find, Bug!

Sorry, you are correct, it isn't impacting the top action blend, good find, Bug!

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

As far as I can see Edited action panel is missing for the selected strip. I'll check

As far as I can see `Edited action` panel is missing for the selected strip. I'll check
Collaborator

The base action doesn't have a strip as it is just the action.. all of this part of the UI is still needing refinement but The influence should be working like it did in 3.3

The base action doesn't have a strip as it is just the action.. all of this part of the UI is still needing refinement but The influence should be working like it did in 3.3

Panel was removed in b6ebd5591c which was done purposefully.
With no strip selected influence operation neither works in 3.3 but it does in 3.2
Raising the priority

Panel was removed in b6ebd5591c7f0e7037a2af66b5e1d96125834949 which was done purposefully. With no strip selected influence operation neither works in 3.3 but it does in 3.2 Raising the priority

In #101275#1421377, @BClark wrote:
The base action doesn't have a strip as it is just the action.. all of this part of the UI is still needing refinement but The influence should be working like it did in 3.3

Hello Brad, for me influence property neither works in 3.3. Could you confirm in uploaded file?
#101275.blend

> In #101275#1421377, @BClark wrote: > The base action doesn't have a strip as it is just the action.. all of this part of the UI is still needing refinement but The influence should be working like it did in 3.3 Hello Brad, for me influence property neither works in 3.3. Could you confirm in uploaded file? [#101275.blend](https://archive.blender.org/developer/F13558590/T101275.blend)
Collaborator

3.3 is working but sort of.
IF you accidentally click on a "strip" and the UI updates to show the Strip Info. then when you deselect it, the action no longer becomes active and the Edited Action settings no longer work.

So what I am seeing is if I create an action fresh and then try and adjust the settings it works. If I click away and select something else, the influence don't update /refresh the action but it does read it when you create a strip.

There is something not getting set back to active when you click on a strip and then deselect widh

3.3 is working but sort of. IF you accidentally click on a "strip" and the UI updates to show the Strip Info. then when you deselect it, the action no longer becomes active and the Edited Action settings no longer work. So what I am seeing is if I create an action fresh and then try and adjust the settings it works. If I click away and select something else, the influence don't update /refresh the action but it does read it when you create a strip. There is something not getting set back to active when you click on a strip and then deselect widh

Added subscribers: @nrupsis, @dr.sybren

Added subscribers: @nrupsis, @dr.sybren

Thanks, Few notes after testing multiple versions::
If NLA strip is selected from the stack then influence works. but now panel is removed for active strips in b6ebd5591c
If base action is selected in nla editor then I expect influence slider to update the viewport based on its value but it neither contributes since 61e8310b75
cc @nrupsis
cc @dr.sybren

Thanks, Few notes after testing multiple versions:: If NLA strip is selected from the stack then influence works. but now panel is removed for active strips in b6ebd5591c7f0e7037a2af66b5e1d96125834949 If base action is selected in nla editor then I expect `influence` slider to update the viewport based on its value but it neither contributes since 61e8310b75 cc @nrupsis cc @dr.sybren
Collaborator

Yes, the panel is removed for active scripts because that "Edit Action panel" has nothing to do with the Selected Strips. It is only fro the Creation of and interaction with the Base action.

The issue is that somehow the base action is no longer being seen/getting updated once you deselect the strip and the UI shows the "Edited Action" tab again.

Yes, the panel is removed for active scripts because that "Edit Action panel" has nothing to do with the Selected Strips. It is only fro the Creation of and interaction with the Base action. The issue is that somehow the base action is no longer being seen/getting updated once you deselect the strip and the UI shows the "Edited Action" tab again.

Ugh yeah. That's weird. My changes didn't necessarily cause it. But they are definitely preventing it.

Upon initial investigation, I didn't see anything that stuck out to me. I'll keep looking into it.

Do either of you know the distinction between a NLA-Track and an NLA-Strip ?

Ugh yeah. That's weird. My changes didn't necessarily cause it. But they are definitely preventing it. Upon initial investigation, I didn't see anything that stuck out to me. I'll keep looking into it. Do either of you know the distinction between a `NLA-Track` and an `NLA-Strip` ?
Collaborator

Track should be where the Strip lives but I wonder if the scene action has a default track?

Track should be where the Strip lives but I wonder if the scene action has a default track?
Pratik Borhade changed title from Edited action in NLA ignored settings to Regression: Edited action in NLA ignored settings 2022-09-27 06:15:52 +07:00

Investigating this a little more, and it comes down to (afaik) a dependency issue. Or rather, data ownership.

A log from "now hidden" action panel's influence relieves that the dependency graph updates it's owners Id, i.e the cube:

graph_id_tag_update: id=OBCube flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT
graph_id_tag_update: id=OBCube flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT
graph_id_tag_update: id=MECube flags=LEGACY_0 source=USER_EDIT
graph_id_tag_update: id=OBCube flags=COPY_ON_WRITE source=USER_EDIT
graph_id_tag_update: id=OBCube flags=COPY_ON_WRITE source=USER_EDIT

When acting upon the Action Strip ("scale-all") in this case, the action strip is the owner of that data block, thus the dependency graph is doing what it should, but since there isn't a dependency, nothing is happening:

graph_id_tag_update: id=ACscale-all flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT
graph_id_tag_update: id=ACscale-all flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT
graph_id_tag_update: id=ACscale-all flags=COPY_ON_WRITE source=USER_EDIT
graph_id_tag_update: id=ACscale-all flags=COPY_ON_WRITE source=USER_EDIT

At this point, my lack of Animation Data is blocking me. I have a feeling I could figure out a way to connect the Action's data to the mesh it's acting upon, but It would be hackish.

@dr.sybren do you have any ideas?

Investigating this a little more, and it comes down to (afaik) a dependency issue. Or rather, data ownership. A log from "now hidden" action panel's influence relieves that the dependency graph updates it's owners Id, i.e the cube: ``` graph_id_tag_update: id=OBCube flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT graph_id_tag_update: id=OBCube flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT graph_id_tag_update: id=MECube flags=LEGACY_0 source=USER_EDIT graph_id_tag_update: id=OBCube flags=COPY_ON_WRITE source=USER_EDIT graph_id_tag_update: id=OBCube flags=COPY_ON_WRITE source=USER_EDIT ``` When acting upon the Action Strip ("scale-all") in this case, the action strip _is_ the owner of that data block, thus the dependency graph is doing what it should, but since there isn't a dependency, nothing is happening: ``` graph_id_tag_update: id=ACscale-all flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT graph_id_tag_update: id=ACscale-all flags=TRANSFORM, GEOMETRY, ANIMATION source=USER_EDIT graph_id_tag_update: id=ACscale-all flags=COPY_ON_WRITE source=USER_EDIT graph_id_tag_update: id=ACscale-all flags=COPY_ON_WRITE source=USER_EDIT ``` At this point, my lack of Animation Data is blocking me. I have a feeling I _could_ figure out a way to connect the Action's data to the mesh it's acting upon, but It would be hackish. @dr.sybren do you have any ideas?
Collaborator

hmm So shouldn't the ID in the first section but cube action? the id= the strip in the second set of code but the first ID isn't showing the action it is just showing the cube?

hmm So shouldn't the ID in the first section but cube action? the id= the strip in the second set of code but the first ID isn't showing the action it is just showing the cube?

My understanding is (and please correct me if I'm wrong) an action is a set of keyframes that exist as it's own "editable" datablock. I can assign an action to multiple objects, and when the action is edited (i.e, I move a frame) it's updated across all uses of that action.

A NLA strip is a "Packaged" Action, in the sense that it's completed. If I were to edit one NLA strip, it wouldn't affect the others.

So when it comes down to influence, an object "owns" the NLA strip, and thus when the influence is updated, the owner Id (I.e, the cube) is sent to the dependency graph to be updated, and the mesh object updates ("scales') in this instance.

However, when an action is updated, the action's Id is passed, since it's the owner of that data, and thus no mesh is updated.

I assume the reason for this, is that an action can be a one to many relationship, and thus we don't want to implicitly update a bunch of meshes for the user.

To answer the question "So shouldn't the ID in the first section but cube action?", from a user perspective, Yes, I would agree. But from a data ownership perspective, I'm not sure.

My understanding is (and please correct me if I'm wrong) an action is a set of keyframes that exist as it's own "editable" datablock. I can assign an action to multiple objects, and when the action is edited (i.e, I move a frame) it's updated across all uses of that action. A NLA strip is a "Packaged" Action, in the sense that it's completed. If I were to edit one NLA strip, it wouldn't affect the others. So when it comes down to influence, an object "owns" the NLA strip, and thus when the influence is updated, the owner Id (I.e, the cube) is sent to the dependency graph to be updated, and the mesh object updates ("scales') in this instance. However, when an action is updated, the action's Id is passed, since it's the owner of that data, and thus no mesh is updated. I assume the reason for this, is that an action can be a one to many relationship, and thus we don't want to implicitly update a bunch of meshes for the user. To answer the question "So shouldn't the ID in the first section but cube action?", from a user perspective, Yes, I would agree. But from a data ownership perspective, I'm not sure.
Collaborator

This comment was removed by @BClark

*This comment was removed by @BClark*

This issue was referenced by bfc9d7cadf

This issue was referenced by bfc9d7cadfe834c477b1d7423304da3d962c9df3

This issue was referenced by f96b729d7b

This issue was referenced by f96b729d7b5a6406fab07108b1cbbbd07b635d51

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Nate Rupsis self-assigned this 2022-10-08 13:25:16 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101275
There is no content yet.