FIX T101275: Regression in NLA causes Actions to be ignored by Context menu (I.e influence, etc)

Reviewed By: sybren

Differential Revision: http://developer.blender.org/D16154